<resources>
    <string name="app_name">Registro AJ</string>
    <string name="registro">Registrar</string>
    <string name="consulta">Consultar</string>
    <string name="habitaciones">Habitaciones disponibles</string>
    <string name="logo">Logo</string>
    <string name="nhabitaciones">N° habitacion</string>
    <string name="an">Apellidos y Nombres</string>
    <string name="dni">DNI</string>
    <string name="precio">Precio</string>
    <string name="procedencia">Procedencia</string>
    <string name="observaciones">Observaciones</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="guardar">Guardar</string>
    <string name="filtro">Filtro</string>
    <string name="textFiltro">Aplicar Filtro</string>
    <string name="textDelete">Limpiar Filtro</string>
    <string name="textCantidad">N° clientes registrados</string>
    <string name="textMensaje">¿Que acción desea realizar?</string>
    <string name="textEliminar">Eliminar registro</string>
    <string name="textModificar">Actualizar registro</string>
    <string name="textActualizar">Actualizar</string>
    <string name="textCambio">Corregir dato</string>
    <string name="txtS30">S/. 35</string>
    <string name="txtS60">S/. 65</string>
    <string name="txtS40">S/. 45</string>
    <string name="txtS50">S/. 55</string>
    <string name="txtS80">S/. 80</string>
    <string name="Hd">Disponible</string>
    <string name="HO">Ocupado</string>
    <string name="textMonto">Ingreso total</string>
    <string name="textMensajePaswoord">Ingresar la contraseña</string>
    <string name="textIngresar">Ingresar</string>
    <string name="contrasena">Contraseña</string>
    <string name="progressLoading">Subiendo los datos…</string>
    <string name="_0">0</string>
    <string name="todo">todo</string>
    <string name="txtSetting">Modificar precio de la habitacion</string>
    <string name="productos">Productos en venta</string>
    <string name="region">REGION</string>
    <string name="arribos">Numero de ARRIBOS en el mes</string>
    <string name="txt_mensage_cantidad">¿Cuanto de este producto desea agregar a caja?</string>
    <string name="colocar_cantidad">Colocar la cantidad que se vendera</string>
    <string name="caja">Monto en caja</string>
</resources>