<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/registro"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/red"
        android:text="@string/registro"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/consulta"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/red"
        android:text="@string/consulta"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registro"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/habitaciones"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/red"
        android:text="@string/habitaciones"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/consulta"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnProductos"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/red"
        android:text="@string/productos"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habitaciones" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="470dp"
        android:layout_height="160dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_hotel" />

</androidx.constraintlayout.widget.ConstraintLayout>