<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScreenConsulta">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ImagenLogo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_hotel" />

        <LinearLayout
            android:id="@+id/linear_filtro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ImagenLogo">

            <TextView
                android:id="@+id/filtro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/filtro"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:translationX="25dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_filtro"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:gravity="center_vertical"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/completar"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="15dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_completar"
                        android:layout_width="255dp"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textSize="15sp"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/spinner_mes"
                    android:layout_width="200dp"
                    android:visibility="gone"
                    android:layout_height="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:gravity="center_vertical"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btnFiltro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:visibility="gone"
                    android:text="@string/textFiltro"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnLimpiar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="center_vertical"
                    android:text="@string/textDelete"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/HorizontalScroll"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_filtro"
            tools:ignore="MissingConstraints,UselessParent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

                <LinearLayout
                    android:id="@+id/tabla"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:id="@+id/txtHabitacion"
                        android:layout_width="100dp"
                        android:layout_height="70dp"
                        android:background="@drawable/drawtable"
                        android:gravity="center"
                        android:text="@string/nhabitaciones"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/txtHora"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txtHora"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:background="@drawable/drawtable"
                        android:gravity="center"
                        android:text="@string/hora"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/txtHabitacion"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txtFecha"
                        android:layout_width="90dp"
                        android:layout_height="70dp"
                        android:background="@drawable/drawtable"
                        android:gravity="center"
                        android:text="@string/fecha"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/txtHora"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txtApellidos"
                        android:layout_width="174dp"
                        android:layout_height="70dp"
                        android:background="@drawable/drawtable"
                        android:gravity="center"
                        android:text="@string/an"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/txtFecha"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txtDni"
                        android:layout_width="80dp"
                        android:layout_height="70dp"
                        android:background="@drawable/drawtable"
                        android:gravity="center"
                        android:text="@string/dni"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/txtApellidos"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txtProcedencia"
                        android:layout_width="100dp"
                        android:layout_height="70dp"
                        android:background="@drawable/drawtable"
                        android:gravity="center"
                        android:text="@string/procedencia"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/txtDni"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txtPrecio"
                        android:layout_width="80dp"
                        android:layout_height="70dp"
                        android:background="@drawable/drawtable"
                        android:gravity="center"
                        android:text="@string/precio"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/txtProcedencia"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txtObservacion"
                        android:layout_width="186dp"
                        android:layout_height="70dp"
                        android:background="@drawable/drawtable"
                        android:gravity="center"
                        android:text="@string/observaciones"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/txtPrecio"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tabla"
                    tools:ignore="RtlSymmetry">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerClientes"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingStart="0dp"
                        android:paddingEnd="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="NotSibling" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="111dp"
                    android:layout_height="97dp"
                    android:layout_marginTop="30dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tabla" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </HorizontalScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/HorizontalScroll"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingTop="50dp">


            <TextView
                android:id="@+id/txtCantidad"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginBottom="80dp"
                android:gravity="center"
                android:text="@string/textCantidad"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@id/cantidad"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/cantidad"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="80dp"
                android:background="@drawable/text_style"
                android:text="0"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>