<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/txtSetting"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/Dialog"
        app:layout_constraintStart_toStartOf="@+id/Dialog"
        app:layout_constraintTop_toBottomOf="@id/Dialog">

        <TextView
            android:id="@+id/textHabitacion"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="60dp"
            android:text="@string/nhabitaciones"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nhabitacion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="60dp"
            tools:ignore="MissingConstraints,RtlSymmetry">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_nhabitacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="15sp"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/Dialog"
        app:layout_constraintStart_toStartOf="@+id/Dialog"
        app:layout_constraintTop_toBottomOf="@+id/linear1">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="109dp"
            android:text="@string/precio"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/preciochange"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="60dp"
            tools:ignore="MissingConstraints,RtlSymmetry">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_preciochange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="15sp"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>